--- a/html/search_sample.html
+++ b/html/search_sample.html
@@ -236,17 +236,14 @@
 						<div class="ss_wrap" style="background-color: #E8E8E8; padding-top:16px;">
 							<div class="sch_ss_wrap">
 								<div class="box">
-									<h4><span class="name">삼성전자</span>종목분석</h4>
-									<div class="analysis"><img
-											src="https://nimaqe002.commutil.kr/itoozamenu/superstocks/mobile/cont/sch_analysis_empty.png"
-											alt="6개월내 종목추천 내역이 없습니다." style="width: 160px ; height:auto;"></div>
+									<h4>종목분석</h4>									
+									<div class="analysis"><img src="../img/cont/sch_analysis_empty.png" alt="해당종목의 최신 추천내역이 없습니다" style="width: 160px ; height:auto;"></div>									
 								</div>
 								<div class="box" style="overflow:hidden; float:left;">
-									<h4>오늘의 추천주</h4>
+									<h4 style="color: #B40000;">오늘의 추천주</h4>
 									<div class="analysis"><a
 											href="https://m.itooza.com/minsstockbot/ss_view.php?scv=SVRPT1pCQVNFPSZzYz0wMjMxNjAmc3Q9MiZzZHQ9MjAyMjA3MjExNDQ4MTY%3D">
-											<p class="logo"><img alt="삼성전자"
-													src="https://nimaqe002.commutil.kr/itoozamenu/sic/cominfo/A023160.jpg">
+											<p class="logo"><img alt="삼성전자" src="https://nimaqe002.commutil.kr/itoozamenu/sic/cominfo/A023160.jpg">
 											</p>
 											<p class="date">07/21</p>
 											<p style="height: 49px;overflow:hidden;" class="tit">태광, 수익성 상승+저평가+연기금 매수
