--- a/html/tsst_p26_2.html
+++ b/html/tsst_p26_2.html
@@ -142,8 +142,8 @@
 									onerror='this.src="../img/common//empty_logo.jpg";' /></a></p>
 						<p class="name" style="width: 150px;"><a href="/stockbot/search.php?sn=122900">아이마켓코리아</a></p>
 					</div>
-					<p class="type"><a href="/stockbot/ss_blist.php?nst=1"><img
-								src="../img/cont/ico_txt_blue_chip.png" alt="우량주" /></a>
+					<p class="type"><a href="/stockbot/ss_blist.php?nst=1"><img src="../img/cont/ico_txt_blue_chip.png"
+								alt="우량주" /></a>
 					</p>
 					<p class="desc">음악 콘텐츠를 제작 및 서비스하는 회사로 레이블(Label) 영역, 솔루션(Solution) 영역, 플랫폼(Platform) 영역으로 나눠져 있습니다.</p>
 				</div>
@@ -157,14 +157,14 @@
 						</colgroup>
 						<thead>
 							<tr>
-								<th class="th01"><img src="../img/cont/add/txt_analysis_tbl_01.png" class="pdl_10"
-										alt="투자의견" /></th>
-								<th class="th02"><img src="../img/cont/add/txt_analysis_tbl_02.png" class="pdl_10"
-										alt="목표가" /></th>
-								<th class="th03"><img src="../img/cont/add/txt_target_tbl_01.png" class="pdl_10"
-										alt="추천가" /></th>
-								<th class="th04"><img src="../img/cont/add/txt_analysis_tbl_04.png"
-										style="height: 17px;" class="pdl_15" alt="기대수익률" /></th>
+								<th class="th01"><img src="../img/cont/add/txt_analysis_tbl_01.png" class="pdl_10" alt="투자의견" />
+								</th>
+								<th class="th02"><img src="../img/cont/add/txt_analysis_tbl_02.png" class="pdl_10" alt="목표가" />
+								</th>
+								<th class="th03"><img src="../img/cont/add/txt_target_tbl_01.png" class="pdl_10" alt="추천가" />
+								</th>
+								<th class="th04"><img src="../img/cont/add/txt_analysis_tbl_04.png" style="height: 17px;"
+										class="pdl_15" alt="기대수익률" /></th>
 							</tr>
 						</thead>
 						<tbody>
@@ -175,16 +175,15 @@
 								<td class="td04 txt nonebg"><span class="f22 increase">26.0</span><span>%</span></td>
 							</tr>
 							<tr>
-								<th class="th05" colspan=2><img src="../img/cont/add/txt_recommend_tbl_add1.png"
-										class="pdl_10" alt="상승시 분할 매도가" /></th>
-								<th class="th06" colspan=2><img src="../img/cont/add/txt_recommend_tbl_add2.png"
-										class="pdl_10" alt="하락시 손절 매도가" /></th>
+								<th class="th05" colspan=2><img src="../img/cont/add/txt_recommend_tbl_add1.png" class="pdl_10"
+										alt="상승시 분할 매도가" /></th>
+								<th class="th06" colspan=2><img src="../img/cont/add/txt_recommend_tbl_add2.png" class="pdl_10"
+										alt="하락시 손절 매도가" /></th>
 							</tr>
 							<tr>
 								<td class="td05 txt" colspan=2><span class=" price2"
 										style=" font-size: 16px;">14,000</span><span class="mgr_5">원</span> ~ <span
-										class=" price2" style=" font-size: 16px;">15,000</span><span
-										class="mgr_5">원</span></td>
+										class=" price2" style=" font-size: 16px;">15,000</span><span class="mgr_5">원</span></td>
 								<td class="td06 txt nonebg" colspan=2 style=" font-size: 17px; font-weight: bold; ">
 									10,700</span><span class="mgr_5" style="font-size:13px;">원</span></td>
 							</tr>
@@ -192,209 +191,169 @@
 					</table>
 				</div>
 			</div>
-
+		
 			<!--신규매수, 비중확대 하단 컨텐츠-->
 			<div class="inbox score_wrap">
-				<h5><img src="../img/cont/h4_tit_01.png" alt="종합 분석 결과" /></h5>
-				<p class="total_score"> <span class="score">221</span><span class="txt">점</span> </p>
+				<h5><img src="/img/cont/h4_tit_01.png" alt="종합 분석 결과"></h5>
+				<p class="total_score" style="background:url('/img/index/img_score_flag2.png') no-repeat scroll 10px 0 / 115px auto">
+					<span class="score" style="margin-left:55px;">71</span><span class="txt">점</span>
+				</p>
 				<ul class="instrument_wrap">
 					<li>
-						<p class="tit"><img src="../img/cont/txt_score_type3.png" alt="수급분석" /></p>
-						<img src="../img/cont/score/img_score_instrument_091.png" class="img_instrument"
-							alt="점수이미지" />
-						<p class="score"><span>91</span>점</p>
+						<p class="tit"><img alt="수급분석" src="/img/cont/txt_score_type3.png"></p>
+						<img class="img_instrument" src="/img/cont/score/img_score_instrument_072.png">
+						<p class="score"><span>72</span>점</p>
 					</li>
 					<li>
-						<p class="tit"><img src="../img/cont/txt_score_type2.png" alt="밸류에이션" /></p>
-						<img src="../img/cont/score/img_score_instrument_090.png" class="img_instrument"
-							alt="점수이미지" />
-						<p class="score"><span>90</span>점</p>
+						<p class="tit"><img alt="밸류에이션" src="/img/cont/txt_score_type2.png"></p>
+						<img class="img_instrument" src="/img/cont/score/img_score_instrument_080.png">
+						<p class="score"><span>80</span>점</p>
 					</li>
 					<li>
-						<p class="tit"><img src="../img/cont/txt_score_type1.png" alt="펀더멘탈" /></p>
-						<img src="../img/cont/score/img_score_instrument_040.png" class="img_instrument"
-							alt="점수이미지" />
-						<p class="score"><span>40</span>점</p>
+						<p class="tit"><img alt="펀더멘탈" src="/img/cont/txt_score_type1.png"></p>
+						<img class="img_instrument" src="/img/cont/score/img_score_instrument_062.png">
+						<p class="score"><span>62</span>점</p>
 					</li>
 				</ul>
+				<p class="clear" style="background-color: #eee; margin:10px 5px 0 ; padding: 10px 0; text-align: center;">
+					<img src="/img/cont/txt_search_bot_info.png" alt="종합점수(100점 만점) = 기업분석 + 수급분석" style="height:18px; ">
+				</p>
 			</div>
-			<div class="bxslider1 swiper-container maingameSwiper">
-				<div class="cont_bottom_wrap swiper-wrapper">
-					<div class="group1 dpb swiper-slide">
-						<!--타이틀-->
-						<div class="inbox">
-							<div class="tit_wrap"> 아이마켓코리아, ‘실적 개선 & 배당 매력’ </div>
-						</div>
-						<!--투자포인트-->
-						<div class="inbox">
-							<h5><img src="../img/cont/h4_tit_02.png?pp=001" alt="투자 포인트" /></h5>
-							<ul class="investment_point">
-								<li>2016년 4분기 연결 실적: 매출액 1조800억원(전년 동기비 +24%), 영업이익 237억원(+89%), 순이익(지배) 72억원(+4%) ※
-									매출액과 영업이익, 시장 컨센서스(최근 1개월간 추정치 평균)를 각각 15%와 90% 상회</li>
-								<li>PBR 1.08배로 5년 평균 대비 -56% ※ 2016년 말 순현금자산 984억원(현재 시총의 24%) ※ 순현금자산 = 현금및현금성자산 +
-									단기금융자산 - 총 금융부채</li>
-								<li>2016년 주당배당금(450원) 기준 시가배당률 3.93%..국고채 3년물 시장금리(1.68%)의 2.3배</li>
-								<li>외국인, 기관 동반 매수..1개월 순매수량: 외국인 +20.8만주(지분 0.6%), 기관 +12.3만주(0.3%)</li>
-							</ul>
-						</div>
-					</div>
-					<div class="group2 dpb swiper-slide">
-						<!--주요 투자지표-->
-						<div class="inbox ofh">
-							<h5><img src="../img/cont/h4_tit_03.png?pp=001" alt="주요 투자지표" /></h5>
-							<ul class="total_info">
-								<li>
-									<p class="title">EPS<span>주당순이익</span></p>
-									<p class="data"><span>720</span>원</p>
-								</li>
-								<li>
-									<p class="title">BPS<span>주당순자산</span></p>
-									<p class="data"><span>10,664</span>원</p>
-								</li>
-								<li>
-									<p class="title">시가배당률<span></span></p>
-									<p class="data"><span>1.98%</span></p>
-								</li>
-								<li>
-									<p class="title">PER<br />
-										<span>주가수익배수</span>
-									</p>
-									<p class="data"><span>15.90</span>배</p>
-								</li>
-								<li>
-									<p class="title">PBR<br />
-										<span>주가순자산배수</span>
-									</p>
-									<p class="data"><span>1.07</span>배</p>
-								</li>
-								<li>
-									<p class="title">ROE<br />
-										<span>자기자본이익률</span>
-									</p>
-									<p class="data"><span>6.75%</span></p>
-								</li>
-							</ul>
-						</div>
-
-						<!--v차트 분석 (특허출원)-->
-						<div class="inbox">
-							<div class="bdr_title">
-								<h4 class="title">재무제표</h4>
-								<div class="tabs_menu">
-									<span class="active">연간</span>
-									<span>분기</span>
-									<strong class="unit">* 기준 : 억원</strong>
-								</div>
-								<!-- //tabs_menu -->
-							</div>
-			
-							<div class="tableetabs_wrap">
-			
-								<!-- 재무제표 > 연간 -->
-								<div class="tabletabs_content tabs_01">
-									<div class="chart_box">
-										<div id="containerfinancials1_1" class="outline_styleSL"></div>
-										<ul class="chart_legend">
-											<li><span><i></i>매출액</span></li>
-											<li><span><i></i>영업이익</span></li>
-											<li><span><i></i>지배순이익</span></li>
-										</ul>
-									</div>
-									<div class="chart_box">
-										<div id="containerfinancials1_2" class="outline_styleSL"></div>
-										<ul class="chart_legend">
-											<li><span><i></i>자산총계</span></li>
-											<li><span><i></i>부채총계</span></li>
-											<li><span><i></i>자본총계</span></li>
-										</ul>
-									</div>
-									<div class="chart_box">
-										<div id="containerfinancials1_3" class="outline_styleSL"></div>
-										<ul class="chart_legend">
-											<li><span><i></i>영업활동</span></li>
-											<li><span><i></i>투자활동</span></li>
-											<li><span><i></i>재무활동</span></li>
-										</ul>
-									</div>
-								</div>
-								<!-- //tabletabs_content -->
-			
-								<!-- 재무제표 > 분기 -->
-								<div class="tabletabs_content tabs_02" style="display: none;">									
-									<div class="chart_box">
-										<div id="containerfinancials2_1" class="outline_styleSL"></div>
-										<ul class="chart_legend">
-											<li><span><i></i>매출액</span></li>
-											<li><span><i></i>영업이익</span></li>
-											<li><span><i></i>지배순이익</span></li>
-										</ul>
-									</div>
-									<div class="chart_box">
-										<div id="containerfinancials2_2" class="outline_styleSL"></div>
-										<ul class="chart_legend">
-											<li><span><i></i>자산총계</span></li>
-											<li><span><i></i>부채총계</span></li>
-											<li><span><i></i>자본총계</span></li>
-										</ul>
-									</div>
-									<div class="chart_box">
-										<div id="containerfinancials2_3" class="outline_styleSL"></div>
-										<ul class="chart_legend">
-											<li><span><i></i>영업활동</span></li>
-											<li><span><i></i>투자활동</span></li>
-											<li><span><i></i>재무활동</span></li>
-										</ul>
-									</div>
-								</div>
-			
-							</div>
-							<!-- //tabletabs_wrap -->
-
-
-
-							
-						</div>
-					</div>
-					<div class="group3 dpb swiper-slide">
-						<!--기업정보-->
-						<div class="inbox">
-							<h5><img src="../img/cont/h4_tit_05.png?pp=001" alt="기업정보" />
-							</h5>
-							<table border="0" class="tbl_ainfo01">
-								<colgroup>
-									<col width="25%">
-									<col width="*">
-								</colgroup>
-								<tbody>
-									<tr>
-										<th scope="row">사업환경</th>
-										<td>▷ 삼성의 구매대행 MRO 사업 부문 철수로 최대주주 삼성전자에서 인터파크로 변경<br>
-											▷ 삼성그룹은 2012년 부터 5년간 9조9000억원의 물량 보장 계약<br>
-											▷ B2B전자상거래업은 정부정책 및 기업의 원가절감 전략에 따라 꾸준히 성장중</td>
-									</tr>
-									<tr>
-										<th scope="row">경기변동</th>
-										<td>▷ 일반적인 상거래와는 달리 B2B 사업부문은 경기변동에 대한 대한 영향이 적음</td>
-									</tr>
-									<tr>
-										<th scope="row">실적변수</th>
-										<td>▷ 주요고객사인 삼성그룹사의 소모성자재 주문 물량 증가시 수혜<br>
-											▷ B2B 시장 성장률 상승시 수혜</td>
-									</tr>
-									<tr>
-										<th scope="row">신규사업</th>
-										<td>▷ 해외고객사, 전략고객사 확대<br></td>
-									</tr>
-								</tbody>
-								<!-- 재무분석 항목은 투자지표로 따로 보여줌 -->
-							</table>
-						</div>
-					</div>
+			<div class="cont_bottom_wrap">				
+				<!--타이틀-->
+				<div class="inbox" style="padding-top: 17px">
+					<div class="tit_wrap"> 아이마켓코리아, ‘실적 개선 & 배당 매력’ </div>
 				</div>
-				<!-- //swiper-wrapper -->
-				<div class="swiper-pagination"></div>
+		
+				<!--투자포인트-->
+				<div class="inbox">
+					<h5><img src="../img/cont/h4_tit_02.png?pp=001" alt="투자 포인트" /></h5>
+					<ul class="investment_point">
+						<li>2016년 4분기 연결 실적: 매출액 1조800억원(전년 동기비 +24%), 영업이익 237억원(+89%), 순이익(지배) 72억원(+4%) ※
+							매출액과 영업이익, 시장 컨센서스(최근 1개월간 추정치 평균)를 각각 15%와 90% 상회</li>
+						<li>PBR 1.08배로 5년 평균 대비 -56% ※ 2016년 말 순현금자산 984억원(현재 시총의 24%) ※ 순현금자산 = 현금및현금성자산 +
+							단기금융자산 - 총 금융부채</li>
+						<li>2016년 주당배당금(450원) 기준 시가배당률 3.93%..국고채 3년물 시장금리(1.68%)의 2.3배</li>
+						<li>외국인, 기관 동반 매수..1개월 순매수량: 외국인 +20.8만주(지분 0.6%), 기관 +12.3만주(0.3%)</li>
+					</ul>
+				</div>
+		
+				<!--주요 투자지표-->
+				<div class="inbox ofh">
+					<h5><img src="../img/cont/h4_tit_03.png?pp=001" alt="주요 투자지표" /></h5>
+					<ul class="total_info">
+						<li>
+							<p class="title">EPS<span>주당순이익</span></p>
+							<p class="data"><span>720</span>원</p>
+						</li>
+						<li>
+							<p class="title">BPS<span>주당순자산</span></p>
+							<p class="data"><span>10,664</span>원</p>
+						</li>
+						<li>
+							<p class="title">시가배당률<span></span></p>
+							<p class="data"><span>1.98%</span></p>
+						</li>
+						<li>
+							<p class="title">PER<br />
+								<span>주가수익배수</span>
+							</p>
+							<p class="data"><span>15.90</span>배</p>
+						</li>
+						<li>
+							<p class="title">PBR<br />
+								<span>주가순자산배수</span>
+							</p>
+							<p class="data"><span>1.07</span>배</p>
+						</li>
+						<li>
+							<p class="title">ROE<br />
+								<span>자기자본이익률</span>
+							</p>
+							<p class="data"><span>6.75%</span></p>
+						</li>
+					</ul>
+				</div>
+		
+				<!--v차트 분석 (특허출원)-->
+				<div class="inbox">
+					<div class="bdr_title">
+						<h4 class="title">재무제표</h4>
+						<div class="tabs_menu">
+							<span class="active">연간</span>
+							<span>분기</span>
+							<strong class="unit">* 기준 : 억원</strong>
+						</div>
+						<!-- //tabs_menu -->
+					</div>
+		
+					<div class="tableetabs_wrap">
+		
+						<!-- 재무제표 > 연간 -->
+						<div class="tabletabs_content tabs_01">
+							<div class="chart_box">
+								<div id="containerfinancials1_1" class="outline_styleSL"></div>
+								<ul class="chart_legend">
+									<li><span><i></i>매출액</span></li>
+									<li><span><i></i>영업이익</span></li>
+									<li><span><i></i>지배순이익</span></li>
+								</ul>
+							</div>
+							<div class="chart_box">
+								<div id="containerfinancials1_2" class="outline_styleSL"></div>
+								<ul class="chart_legend">
+									<li><span><i></i>자산총계</span></li>
+									<li><span><i></i>부채총계</span></li>
+									<li><span><i></i>자본총계</span></li>
+								</ul>
+							</div>
+							<div class="chart_box">
+								<div id="containerfinancials1_3" class="outline_styleSL"></div>
+								<ul class="chart_legend">
+									<li><span><i></i>영업활동</span></li>
+									<li><span><i></i>투자활동</span></li>
+									<li><span><i></i>재무활동</span></li>
+								</ul>
+							</div>
+						</div>
+						<!-- //tabletabs_content -->
+		
+						<!-- 재무제표 > 분기 -->
+						<div class="tabletabs_content tabs_02" style="display: none;">
+							<div class="chart_box">
+								<div id="containerfinancials2_1" class="outline_styleSL"></div>
+								<ul class="chart_legend">
+									<li><span><i></i>매출액</span></li>
+									<li><span><i></i>영업이익</span></li>
+									<li><span><i></i>지배순이익</span></li>
+								</ul>
+							</div>
+							<div class="chart_box">
+								<div id="containerfinancials2_2" class="outline_styleSL"></div>
+								<ul class="chart_legend">
+									<li><span><i></i>자산총계</span></li>
+									<li><span><i></i>부채총계</span></li>
+									<li><span><i></i>자본총계</span></li>
+								</ul>
+							</div>
+							<div class="chart_box">
+								<div id="containerfinancials2_3" class="outline_styleSL"></div>
+								<ul class="chart_legend">
+									<li><span><i></i>영업활동</span></li>
+									<li><span><i></i>투자활동</span></li>
+									<li><span><i></i>재무활동</span></li>
+								</ul>
+							</div>
+						</div>
+		
+					</div>
+					<!-- //tabletabs_wrap -->
+				</div>
+		
 			</div>
+			<!-- //cont_bottom_wrap -->
 		</div>
+		<!-- //tsst_ver -->
 		
 		<!--푸터-->
 		<footer id="footer">	
