--- a/html/ss_tmlist.html
+++ b/html/ss_tmlist.html
@@ -98,42 +98,30 @@
 						<ul class="theme_card basic scrollul">
 
 							<li>
-								<a href="/minsstockbot/tm_view.php?ud=445">
+								<a href="/minsstockbot/tm_view.php?ud=496">
 									<p class="count top3">1</p>
-									<p class="tit">아연</p>
+									<p class="tit">리츠(REITs)</p>
 									<p class="pdl_5 mgb_5"><img src="../img/cont/tit_theme_count.png"
 											style="height: 14px; vertical-align: middle; margin-right: 5px;"
 											alt="기업수"><span
-											style="font-weight:bold; font-size:14px; padding-top: 1px;">2</span></p>
+											style="font-weight:bold; font-size:14px; padding-top: 1px;">0</span></p>
 									<div style="position:relative;">
 										<p class="pdl_5"><img src="../img/cont/tit_theme_average.png" alt="평균 등락률"
 												style="height: 15px;"></p>
 										<p class="per"><span class="increase"
-												style="font-size: 15px;">▲10.0</span><span>%</span></p>
+												style="font-size: 15px;">▲3.0</span><span>%</span></p>
 									</div>
 									<div class="data">
-										<p><span style="width:48%;"><img src="../img/cont/tit_theme_s_01.png"
-													alt="상승"></span><span class="num increase">▲2</span></p>
-										<p style=" background-color:#D5D5D5;"><span style="width:48%;"><img
-													src="../img/cont/tit_theme_s_02.png" alt="하락"></span><span
-												class="num decrease">▼0</span></p>
-										<p><span style="width:48%;"><img src="../img/cont/tit_theme_s_03.png"
-													alt="보합"></span><span class="num ">0</span></p>
+										<p><span style="width:48%;"><img src="../img/cont/tit_theme_s_01.png"></span><span class="num increase">0</span></p>
+										<p style=" background-color:#D5D5D5;"><span style="width:48%;"><img src="../img/cont/tit_theme_s_02.png"></span><span class="num decrease">0</span></p>
+										<p><span style="width:48%;"><img src="../img/cont/tit_theme_s_03.png"></span><span class="num ">0</span></p>
 									</div>
-									<div class="item">
-										<p class="logo"><img
-												onerror="this.src=&quot;https://nimaqe002.commutil.kr/itoozamenu/sic/cominfo/empty_logo.jpg&quot;;"
-												alt=""
-												src="https://nimaqe002.commutil.kr/itoozamenu/sic/cominfo/A000670.jpg">
-										</p>
-										<p class="name" style="overflow:hidden;height:16px;">영풍</p>
-										<p class="price">710,000원</p>
-									</div>
-									<p
-										style="position:absolute; bottom:3px; padding: 3px 0 ; text-align: right; width:97%;">
-										<span class="increase mgr_10">▲80,000원</span><span
-											class="increase">▲12.7%</span>
-									</p>
+									
+									<!-- 테마에 해당하는 기업이 없는 경우 -->
+									<div class="no_relevantBox">
+										<p class="relevant">해당하는 기업이 없습니다.</p>
+									</div>									
+									<!-- //no_relevantBox  -->
 								</a>
 							</li>
 
