--- a/html/tsst_p23.html
+++ b/html/tsst_p23.html
@@ -665,7 +665,7 @@
 					<ul style="width: 1950px;" class="theme_card scrollul">
 						<li> <a href="/stockbot/tm_view.php?ud=186">
 								<p class="count top3">1</p>
-								<p class="tit">엔젤산업 관련 기업</p>
+								<p class="tit">리츠</p>
 								<p class="pdl_5 mgb_5"><img src="../img/cont/tit_theme_count.png"
 										style="height: 14px; vertical-align: middle; margin-right: 5px;" alt="기업수"><span
 										style="font-weight:bold; font-size:14px">4</span></p>
@@ -683,17 +683,11 @@
 									<p><span style="width:48%;"><img src="../img/cont/tit_theme_s_03.png"
 												alt="보합" /></span><span class="num ">0</span></p>
 								</div>
-								<div class="item">
-									<p class="logo"><img
-											onerror="this.src=&quot;../img/common//empty_logo.jpg&quot;;" alt=""
-											src="https://kimg.choicestock.co.kr/img/logo/066910.jpg"></p>
-									<p class="name" style="overflow:hidden;height:16px;">손오공</p>
-									<p class="price">5,950원</p>
-								</div>
-								<p
-									style="position:absolute; bottom:3px; padding: 3px 0 ; text-align: right; width:97%;">
-									<span class="increase mgr_10">▲320원</span><span class="increase">▲5.7%</span>
-								</p>
+								<!-- 테마에 해당하는 기업이 없는 경우 -->
+								<div class="no_relevantBox">
+									<p class="relevant">해당하는 기업이 없습니다.</p>
+								</div>									
+								<!-- //no_relevantBox  -->
 							</a> </li>
 						<li> <a href="/stockbot/tm_view.php?ud=128">
 								<p class="count top3">2</p>
