--- a/html/tsst_p23.html
+++ b/html/tsst_p23.html
@@ -28,18 +28,32 @@
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 	<script type="text/javascript" src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 	<!-- highstock -->
-	<script defer src="https://code.highcharts.com/stock/highstock.js"></script>
-	<script defer src="https://code.highcharts.com/stock/modules/data.js"></script>
-	<script defer src="https://code.highcharts.com/stock/modules/hollowcandlestick.js"></script>
-	<script src="../css/ss_chartjs.js"></script>
+    <script src="http://godlife.ivyro.net/highcharts/stock/highstock.js"></script>
+    <script src="http://godlife.ivyro.net/highcharts/stock/modules/data.js"></script>
+    <script src="http://godlife.ivyro.net/highcharts/stock/modules/hollowcandlestick.js"></script>
+    <script src="http://godlife.ivyro.net/highcharts/stock/modules/no-data-to-display.js"></script>
+    <script src="http://godlife.ivyro.net/highcharts/stock/modules/treemap.js"></script>
+    <script src="http://godlife.ivyro.net/highcharts/stock/highcharts-more.js"></script>
+    <script src="http://godlife.ivyro.net/highcharts/stock/modules/exporting.js"></script>
+    <script src="http://godlife.ivyro.net/highcharts/stock/modules/export-data.js"></script>
+    <script src="http://godlife.ivyro.net/highcharts/stock/modules/accessibility.js"></script>	
 	<!-- Swiper -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
 	<!-- css -->
+	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 	<link rel="stylesheet" type="text/css" href="../css/common.css" media="all" />
-	<link rel="stylesheet" type="text/css" href="../css/t-sst.css" media="all" />
+	<link rel="stylesheet" type="text/css" href="../css/t-sst.css" media="all" />    
+    <link rel="stylesheet" type="text/css" href="../css/scss/super_stock.css?v=1323" />    
 	<!-- js -->
 	<script type="text/javascript" src="../css/add_design.js"></script>
+	<script src="../css/ss_chartjs.js"></script>
+    <script src="../css/chartjs_quant.js"></script>    
+    <script src="../css/quantup.js"></script>
+    <!-- 이 아래는 로컬에서만 사용되는 파일 -->
+    <script src="../css/local.js"></script>
+    <!-- 로컬에서만 사용되는 파일 종료  -->
+	
 	<!-- //swiper -->
 	<script>
 		$(document).ready(function () {
@@ -95,16 +109,13 @@
 			<div id="menu">
 				<nav class="gnb">
 					<ul class="gnb_li">
-						<li><a href="https://m.itooza.com/minsstockbot/m_index.php" class="on" title="HOME">HOME</a>
-						</li>
-						<li><a href="https://m.itooza.com/minsstockbot/ss_blist.php?nst=999" title="종목추천">종목추천</a></li>
-						<li><a href="https://m.itooza.com/minsstockbot/ss_portmng.php?no=1" title="슈퍼스탁 1호">슈퍼스탁1호</a>
-						</li>
-						<li><a href="https://m.itooza.com/minsstockbot/ss_portmng.php?no=2" title="슈퍼스탁 2호">슈퍼스탁2호</a>
-						</li>
-						<li><a href="https://m.itooza.com/minsstockbot/m_invgood.php" title="투자점수">투자점수</a></li>
-						<li style="padding-right: 30px;"><a href="https://m.itooza.com/minsstockbot/ss_tmlist.php"
-								title="업종/테마">업종/테마</a></li>
+						<li><a href="/" title="HOME" class="on">HOME</a></li>
+						<li><a href="/stock/portone" title="슈퍼스탁 1호">슈퍼스탁1호</a></li>
+						<li><a href="/stock/recommend" title="슈퍼스탁 2호">슈퍼스탁2호</a></li>
+						<!--<li><a href="/stock/porttwo" title="슈퍼스탁 2호">슈퍼스탁2호</a></li>-->
+						<li><a href="/stock/score" title="투자점수">투자점수</a></li>
+						<li><a href="/stock/theme" title="업종/테마">업종/테마</a></li>
+						<li><a href="">미국주식</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -119,7 +130,8 @@
 			<div class="tsst_visual"><a href="#" title="서비스 바로가기"><img src="../img/index/img_index_visual.png"
 						alt="T슈퍼스탁 로봇엔진이 분석한 최고의 주식정보를 제공 합니다." /></a> </div>
 			<div class="index_section">
-				<h3><a href="tsst_p26_1.html"><img src="../img/index/tit_index_01_01.png" alt="종목 추천" /></a></h3>
+				<!-- <h3><a href="tsst_p26_1.html"><img src="../img/index/tit_index_01_01.png" alt="종목 추천" /></a></h3> -->
+				<h3 class="bdr_title"><a href="">종목 추천</a></h3>
 				<p class="btn_more"><a href="#">더보기 +</a></p>
 				<div class="li_wrap" data-key="2" data-addkey="" data-page="1" data-end="0" data-onewidth="172"
 					data-maxwidth="2064" data-limit="10" style=" -webkit-overflow-scrolling:touch;">
@@ -281,8 +293,85 @@
 					</ul>
 				</div>
 			</div>
+
 			<div class="index_section">
-				<h3><a href="tsst_p28_1.html"><img src="../img/index/tit_index_02.png" alt="적중! 수익실현 종목" /></a></h3>
+				<!-- 달려라 미국주식 -->
+				<h3 class="bdr_title"><a href="">달려라 미국주식</a></h3>
+				<p class="btn_more"><a href="#">더보기 +</a></p>
+
+				<div class="strategy_list usa_stock">
+					<ul class="list" onclick="location.href =''">
+						<li class="title_logo super_pick">
+							<span class="logo"><img src="../img/Follow_me.svg" alt=""></span>
+							<!-- 슈퍼Pick 이미지는 Follow_me.svg, rocket.svg 두개 랜덤  -->
+						</li>
+						<li class="detail">
+							<span class="tag">슈퍼Pick</span>
+							<a href="" class="txt">필립 모리스 인터내셔널</a>
+						</li>
+					</ul>
+					<ul class="list" onclick="location.href =''">
+						<li class="title_logo exploration_life">
+							<span class="logo"><img src="../img/pencil.svg" alt=""></span>
+						</li>
+						<li class="detail">
+							<span class="tag">탐구생활</span>
+							<a href="" class="txt">텍사스퍼시픽랜드트러스트-TPL 한줄 처리텍사스퍼시픽랜드트러스트-TPL 한줄 처리</a>
+						</li>
+					</ul>
+					<ul class="list" onclick="location.href =''">
+						<li class="title_logo super_pick">
+							<span class="logo"><img src="../img/Follow_me.svg" alt=""></span>
+							<!-- 슈퍼Pick 이미지는 Follow_me.svg, rocket.svg 두개 랜덤  -->
+						</li>
+						<li class="detail">
+							<span class="tag">슈퍼Pick</span>
+							<a href="" class="txt">필립 모리스 인터내셔널</a>
+						</li>
+					</ul>
+					<ul class="list" onclick="location.href =''">
+						<li class="title_logo super_pick">
+							<span class="logo"><img src="../img/Follow_me.svg" alt=""></span>
+							<!-- 슈퍼Pick 이미지는 Follow_me.svg, rocket.svg 두개 랜덤  -->
+						</li>
+						<li class="detail">
+							<span class="tag">슈퍼Pick</span>
+							<a href="" class="txt">필립 모리스 인터내셔널</a>
+						</li>
+					</ul>
+				</div>								
+				
+				<script>
+					$(document).ready(function () {
+						var swiper = new Swiper('.maingameSwiper', {
+							autoHeight: true,
+							slidesPerView: "auto",
+							pagination: {
+								el: ".swiper-pagination",
+							},
+						});
+
+						// 각 .title_logo.super_pick 요소에 대해 랜덤 이미지 설정
+						$('.title_logo.super_pick').each(function() {
+							var logos = ['../img/Follow_me.svg', '../img/rocket.svg'];
+							var randomLogo = logos[Math.floor(Math.random() * logos.length)];
+							var logoElement = $(this).find('.logo img');
+							logoElement.attr('src', randomLogo);
+
+							// rocket.svg가 선택된 경우에만 blue 클래스 추가
+							if (randomLogo.includes('rocket')) {
+								$(this).addClass('blue');
+							}
+						});
+					});
+				</script>
+				
+			</div>
+			<!-- //달려라 미국주식 -->
+
+
+			<div class="index_section">				
+				<h3 class="bdr_title"><a href="">적중! 수익실현 종목</a></h3>
 				<p class="btn_more"><a href="tsst_p28_1.html"><a href="#">더보기 +</a></a>
 				</p>
 				<div class="li_wrap" data-key="3" data-addkey="0" data-page="1" data-end="0" data-onewidth="150"
@@ -561,10 +650,10 @@
 					</ul>
 				</div>
 			</div>
+
 			<div class="index_section">
-				<!--추천 포트폴리오-->
-				<h3><a href="/stockbot/ss_portmng.php?no=1"><img alt="포트폴리오 서비스"
-							src="../img/index/tit_index_03.png"></a></h3>
+				<!--추천 포트폴리오-->				
+				<h3 class="bdr_title"><a href="">포트폴리오 서비스</a></h3>				
 				<div class="port_wrap">
 					<!--포트1호-->
 					<div class="port_1"> <a href="#">
@@ -597,9 +686,8 @@
 				</div>
 			</div>
 			<!--스톡봇 전종목 투자매력도 순위-->
-			<div class="index_section">
-				<h3><a href="/stockbot/m_invgood.php"><img alt="종목 점수 (투자 매력도 상위 종목)"
-							src="../img/index/tit_index_09.png"></a></h3>
+			<div class="index_section">								
+				<h3 class="bdr_title"><a href="">종목 점수 <span>(투자 매력도 상위 종목)</span></a></h3>
 				<div class="tbl_wrap" style="border:none;">
 					<p class="btn_more01"><a href="#">더보기 +</a></p>
 					<table cellspacing="0" cellpadding="0" style="width:100%;">
@@ -657,8 +745,8 @@
 				}
 			</style>
 			<!--테마 급등주 분석-->
-			<div class="index_section">
-				<h3><a href="/stockbot/ss_tmlist.php"><img alt="업종/테마" src="../img/index/tit_index_04.png"></a></h3>
+			<div class="index_section">				
+				<h3 class="bdr_title"><a href="">업종/테마</a></h3>
 				<p class="btn_more"><a href="#">더보기 +</a></p>
 				<div style=" -webkit-overflow-scrolling:touch;" data-limit="10" data-maxwidth="1950" data-onewidth="195"
 					data-end="0" data-page="1" data-addkey="" data-key="tm" class="li_wrap">
