--- a/html/search_view.html
+++ b/html/search_view.html
@@ -168,7 +168,7 @@
                     <div class="l_box">
                         <h3 class="title">증권사 투자의견</h3>
                         <span class="total">총 <strong>34</strong>건</span>
-                        <span class="signal_guide"><img src="../img/txt_guide_w.svg" alt="가이드보기"></span>
+                        <span class="signal_guide"><img src="../img/us/txt_guide_w.svg" alt="가이드보기"></span>
                         <span class="signal buy">매수</span>
                     </div>
                     <!-- 매수 매도 보유 관망 버튼 확인용. 실 서비스에선 삭제 -->
@@ -272,7 +272,7 @@
                     </div>
                     <div class="chart_box">
                         <h3 class="c_title">주가&EPS</h3>
-                        <span class="signal_guide"><img src="../img/txt_guide_w.svg" alt="가이드보기"></span>
+                        <span class="signal_guide"><img src="../img/us/txt_guide_w.svg" alt="가이드보기"></span>
                         <span class="unit">* 단위 : 달러</span>
                         <div id="containerfinancials2_1" class="financialsLine_style"></div>
                     </div>
@@ -339,7 +339,7 @@
             <!-- 퀀트 종목분석 -->
             <div class="modal signal_pop01">
                 <div class="pop_header">
-                    <h1 class="pop_title"><i><img src="../img/txt_guide_m.svg" alt="가이드보기"></i>퀀트 종목분석</h1>
+                    <h1 class="pop_title"><i><img src="../img/us/txt_guide_m.svg" alt="가이드보기"></i>퀀트 종목분석</h1>
                     <span class="clse">
                         <!--닫기-->
                     </span>
@@ -356,7 +356,7 @@
             <!-- 증권사 투자의견 -->
             <div class="modal signal_pop02">
                 <div class="pop_header">
-                    <h1 class="pop_title"><i><img src="../img/txt_guide_m.svg" alt="가이드보기"></i>증권사 투자의견</h1>
+                    <h1 class="pop_title"><i><img src="../img/us/txt_guide_m.svg" alt="가이드보기"></i>증권사 투자의견</h1>
                     <span class="clse">
                         <!--닫기-->
                     </span>
@@ -393,7 +393,7 @@
             <!-- 스마트스코어 -->
             <div class="modal signal_diagnosis">
                 <div class="pop_header">
-                    <h1 class="pop_title"><i><img src="../img/txt_guide_m.svg" alt="가이드보기"></i>스마트스코어</h1>
+                    <h1 class="pop_title"><i><img src="../img/us/txt_guide_m.svg" alt="가이드보기"></i>스마트스코어</h1>
                     <span class="clse">
                         <!--닫기-->
                     </span>
