--- a/html/tsst_p23.html
+++ b/html/tsst_p23.html
@@ -40,6 +40,18 @@
 	<!-- Swiper -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
+
+
+	<!-- css -->
+	<link rel="stylesheet" type="text/css" href="/css/common.css?v=1.3" media="all">
+	<link rel="stylesheet" type="text/css" href="/css/t-sst.css" media="all">
+
+	<!-- js -->
+	<script type="text/javascript" src="/js/add_design.js"></script>
+
+
+
+
 	<!-- css -->
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 	<link rel="stylesheet" type="text/css" href="../css/common.css" media="all" />
@@ -109,10 +121,9 @@
 			<div id="menu">
 				<nav class="gnb">
 					<ul class="gnb_li">
-						<li><a href="/" title="HOME" class="on">HOME</a></li>
+						<li><a href="/" title="HOME" class="on">홈</a></li>
 						<li><a href="/stock/portone" title="슈퍼스탁 1호">슈퍼스탁1호</a></li>
-						<li><a href="/stock/recommend" title="슈퍼스탁 2호">슈퍼스탁2호</a></li>
-						<!--<li><a href="/stock/porttwo" title="슈퍼스탁 2호">슈퍼스탁2호</a></li>-->
+						<li><a href="/stock/recommend" title="슈퍼스탁 2호">슈퍼스탁2호</a></li>						
 						<li><a href="/stock/score" title="투자점수">투자점수</a></li>
 						<li><a href="/stock/theme" title="업종/테마">업종/테마</a></li>
 						<li><a href="">미국주식</a></li>
@@ -302,7 +313,7 @@
 				<div class="strategy_list usa_stock">
 					<ul class="list" onclick="location.href =''">
 						<li class="title_logo super_pick">
-							<span class="logo"><img src="../img/Follow_me.svg" alt=""></span>
+							<span class="logo"><img src="../img/us/Follow_me.svg" alt=""></span>
 							<!-- 슈퍼Pick 이미지는 Follow_me.svg, rocket.svg 두개 랜덤  -->
 						</li>
 						<li class="detail">
@@ -312,7 +323,7 @@
 					</ul>
 					<ul class="list" onclick="location.href =''">
 						<li class="title_logo exploration_life">
-							<span class="logo"><img src="../img/pencil.svg" alt=""></span>
+							<span class="logo"><img src="../img/us/pencil.svg" alt=""></span>
 						</li>
 						<li class="detail">
 							<span class="tag">탐구생활</span>
@@ -321,7 +332,7 @@
 					</ul>
 					<ul class="list" onclick="location.href =''">
 						<li class="title_logo super_pick">
-							<span class="logo"><img src="../img/Follow_me.svg" alt=""></span>
+							<span class="logo"><img src="../img/us/Follow_me.svg" alt=""></span>
 							<!-- 슈퍼Pick 이미지는 Follow_me.svg, rocket.svg 두개 랜덤  -->
 						</li>
 						<li class="detail">
@@ -331,7 +342,7 @@
 					</ul>
 					<ul class="list" onclick="location.href =''">
 						<li class="title_logo super_pick">
-							<span class="logo"><img src="../img/Follow_me.svg" alt=""></span>
+							<span class="logo"><img src="../img/us/Follow_me.svg" alt=""></span>
 							<!-- 슈퍼Pick 이미지는 Follow_me.svg, rocket.svg 두개 랜덤  -->
 						</li>
 						<li class="detail">
@@ -343,17 +354,9 @@
 				
 				<script>
 					$(document).ready(function () {
-						var swiper = new Swiper('.maingameSwiper', {
-							autoHeight: true,
-							slidesPerView: "auto",
-							pagination: {
-								el: ".swiper-pagination",
-							},
-						});
-
 						// 각 .title_logo.super_pick 요소에 대해 랜덤 이미지 설정
 						$('.title_logo.super_pick').each(function() {
-							var logos = ['../img/Follow_me.svg', '../img/rocket.svg'];
+							var logos = ['../img/us/Follow_me.svg', '../img/us/rocket.svg'];
 							var randomLogo = logos[Math.floor(Math.random() * logos.length)];
 							var logoElement = $(this).find('.logo img');
 							logoElement.attr('src', randomLogo);
